Remove Overflow hidden as it would cause issues

--- a/style.scss
+++ b/style.scss
@@ -11,6 +11,6 @@ body {
     width: 100%;
     max-width: $max-width;
     min-width: $min-width;
-    overflow: hidden; /* Hide scrollbars */
+
     scroll-behavior: smooth;
 }
